Fix contact query
