# controllers/contacts.go
@@ -14,16 +14,21 @@ var GetContacts = func(w http.ResponseWriter, r *http.Request) {
 	var pageSize int
 	var page int
 	var districtID int
+	var provinceID int
 	var err error
 
 	pageSizeParam := r.URL.Query().Get("pageSize")
 	pageParam := r.URL.Query().Get("page")
 	districtIDParam := r.URL.Query().Get("districtID")
+	provinceIDParam := r.URL.Query().Get("provinceID")
 
 	pageSize, err = strconv.Atoi(pageSizeParam)
 	page, err = strconv.Atoi(pageParam)
 	if len(districtIDParam) > 0 {
 		districtID, err = strconv.Atoi(districtIDParam)
+	}
+	if len(provinceIDParam) > 0 {
+		provinceID, err = strconv.Atoi(provinceIDParam)
 	}
 
 	if err != nil {
@@ -39,7 +44,7 @@ var GetContacts = func(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	u.Respond(w, models.GetContacts(page, pageSize, districtID))
+	u.Respond(w, models.GetContacts(page, pageSize, provinceID, districtID))
 }
 
 // GetAllContacts controller to get all contact entities without paging
